[package]
name = "scol"
version = "0.1.1"
edition = "2021"
description = "A simple command line tool for colouring text"
homepage = "https://github.com/dkendal/scol"
repository = "https://github.com/dkendal/scol"
keywords = ["cli", "terminal", "colour", "color", "ansi"]
categories = ["command-line-utilities"]
license = "MIT"
lisence-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive", "env"] }
regex = "1.8.1"
termcolor = "1.2.0"
